using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public interface I_ResultGettable {
    public abstract ResultData GetResultData();
}
