using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class ResultData {
    public int TakedTrun;
    public float TakedTime;
    public int CrearStage;
    public bool isCrear;
}
